Se configuro bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-
-    <span>{{ title }} app is running!</span>
-    <hr>
-    <span>{{ secondaryTitle }} app is running!</span>
+<div style="text-align: center;">
+<h1> Hola mundo {{titulo}}</h1>
+<app-personas></app-personas>
+<app-persona></app-persona>
+</div>
